Plugin Name: MarketPress
Author: Aaron Edwards (incsub)

Change Log:
----------------------------------------------------------------------

2.9.5.3
----------------------------------------------------------------------
- Fixed: Invalid measurement errors when using UPS shipping and a base country that uses the metric system http://wp.mu/a5s
- Fixed: Incorrect First-class Mail Parcel rates being returned when using USPS shipping
- Fixed: PHP warnings with wp_title_output()
- Fixed: PHP errors in PIN gateway
- Fixed: Nav Menu items classes not being applied correctly
- Fixed: Bug with pagination when displaying products from a given category using [mp_list_products] short code

2.9.5.2
----------------------------------------------------------------------
- Added: BN codes to PayPal gateways

2.9.5.1
----------------------------------------------------------------------
- Added: UPS shipping gateway now allows admin to choose the appropriate pickup type allowing for more accurate rate requests
- Fixed: When using global product list the "buy now" button adds the item to a cart that doesn't exist http://wp.mu/a2i
- Fixed: Shipping costs are being calculated but are not applying when order is processed http://wp.mu/a2h
- Fixed: Unable to deselect shipping options in Fedex shipping gateway settings http://wp.mu/a0s
- Fixed: Unable to deselect "use default embedded form" in Stripe gateway settings http://wp.mu/a0t
- Fixed: Unable to deselect checkboxes in Bitpay gateway settings
- Fixed: Extra characters at end of admin order notification email http://wp.mu/a0u

2.9.5
----------------------------------------------------------------------
- Fixed: When using global cart admin some times loses the ability to change shipping methods

2.9.4.9
----------------------------------------------------------------------
- Fixed: File download issue that some users were reporting
- Fixed: Conflicts with Ultimatum theme http://wp.mu/9tt