@@ -4,6 +4,9 @@ Author: Aaron Edwards (incsub)
 Change Log:
 ----------------------------------------------------------------------
 
+- Fixed: Shipping tax not being calculated correctly when using tax-inclusive pricing
+- Fixed: Out of stock products are still showing when "Hide out of stock items" is enabled
+
 2.9.5.3
 ----------------------------------------------------------------------
 - Fixed: Invalid measurement errors when using UPS shipping and a base country that uses the metric system http://wp.mu/a5s
